# whispeer

./: Cargo.toml  README.md  output.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2g8wdl6qgkpk9dhj9rir7zkf9nxnjqzw-source  v6ci94m8fn57aznvqq6ha3b9dbd9r1yd-source
src/: lib.rs
src/broker/: broker.rs  message.rs  mod.rs  subscriber.rs  topic.rs
src/plugins/: compression.rs  encryption.rs  manager.rs  mod.rs  plugin.rs  websocket.rs
src/transport/: mod.rs  quic.rs
tests/: plugins_integration.rs  websocket_test.rs
