[package]
name = "whispeer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.32", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
dashmap = "5.5"
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"
tokio-util = { version = "0.7", features = ["codec"] }
serde_json = "1.0"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
futures = "*"
anyhow = "*"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
base64 = "0.21"
tokio-tungstenite = { version = "*" }
futures-util = "*"
